tests/fail/semantics/duplicate_main_annotation/main.kira
@Main
@Main
function entry() {
    return;
}
